syntax = "proto3";

option csharp_namespace = "Proto.DTO.AnalysisBySprint";

import "dto/time_slot.proto";
import "dto/statistics_data.proto";
import "dto/ticket.proto";

message AnalysisBySprint {
  string sprint_name = 1;
  repeated TimeSlotProto time_slots = 2;
  repeated StatisticsDataProto statistics_data = 3;
  repeated TicketProto tickets = 4;
  map<string, int32> productive_tags = 5;
  map<string, int32> neutral_tags = 6;
  map<string, int32> unproductive_tags = 7;
}